# flytrap

./: Cargo.toml  Dockerfile  LICENSE  Readme.md  fly.toml
.github/workflows/: ci.yml  regions.yml
demo/: Cargo.toml  Readme.md
demo/src/: app.rs  backend.rs  main.rs
demo/src/app/: pipe.rs
demo/src/cluster/: mailbox.rs  mod.rs  protocol.rs  seq.rs  time.rs
demo/src/message/: client.rs  id.rs  mod.rs
demo/templates/: base.html  flytrap.css  index.css  index.html
examples/: api.rs  placement.rs  regions.rs  server.rs
scripts/: regions.js
src/: api.rs  app.rs  error.rs  http.rs  lib.rs  machine.rs  placement.rs  region.rs  resolver.rs
src/gossip/: endpoint.rs  latency.rs  mod.rs  node.rs  peer.rs  time.rs
src/gossip/protocol/: ca.rs  mod.rs  seq.rs
src/ping/: message.rs  mod.rs  monitor.rs  seq.rs  status.rs  time.rs
