[package]
name = "flytrap-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lyra Naeseth <lyra@lyra.codes>"]
homepage = "https://flytrap.fly.dev/"
repository = "https://github.com/silverlyra/flytrap"
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json", "with-axum"] }
askama_axum = { version = "0.3.0", features = ["serde-json"] }
axum = { version = "0.6.20", features = ["headers"] }
axum-typed-websockets = { version = "0.5.0" }
binrw = "0.13.1"
bytes = { version = "1.5.0" }
derive_more = { version = "0.99.17" }
flytrap = { path = "../", features = ["serde"] }
getrandom = { version = "0.2.11", features = ["std"] }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["hex"] }
tokio = { version = "1.34.0", features = ["full"] }
twox-hash = "1.6.3"
uuid = { version = "1.5.0", features = ["serde", "v7"] }
