[package]
name = "flytrap-demo"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lyra Naeseth <lyra@lyra.codes>"]
homepage = "https://flytrap.fly.dev/"
repository = "https://github.com/silverlyra/flytrap"
readme = "Readme.md"

[dependencies]
askama = { version = "0.12.1", features = ["serde", "serde-json", "with-axum"] }
askama_axum = { version = "0.4.0", features = ["serde-json"] }
axum = { version = "0.7.2" }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
flytrap = { path = "../", features = ["metrics", "ping", "serde", "tracing"] }
metrics = "0.21.1"
metrics-exporter-prometheus = { version = "0.12.1", default-features = false, features = [
    "http-listener",
    "tracing",
] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
